# sequentia

./: Makefile  README.md  pyproject.toml
sequentia/: __init__.py  sequentia.py
tests/: test.py
titanoboa/: __init__.py  titanoboa.py
